add paper texture to output letter

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </div>
         </div>
 
-        <div class="col-lg-8">
+        <div class="col-lg-8 paper">
           <div id="letter">
             <h1>Lorem Ipsum Associates, LLC</h1>
             <p>Dear <span class="name"></span>,</p>
